--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "jahidul islam",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "amqp": "^0.2.4"
+  }
 }
